# rag-openheidelberg

./: README.md  pyproject.toml
src/: config.py  couchdbclient.py  s3client.py
src/categorizing/: categorizer.py  pdfparser.py
src/collecting/: collector.py  councilinsights.py  counsilinsights.py  localfiles.py
src/converting/: converter.py  docling_converter.py
src/rag_openheidelberg/defs/: pipeline.py
src/rag_openheidelberg/defs/categorizer/: assets.py
src/rag_openheidelberg/defs/collector/: assets.py
src/rag_openheidelberg/defs/converter/: assets.py
src/rag_openheidelberg/defs/embeddor/: assets.py
src/rag_openheidelberg/defs/evaluator/: assets.py
src/rag_openheidelberg/defs/query/: assets.py
src/rag_openheidelberg/defs/retriever/: assets.py
src/rag_openheidelberg/defs/tokenizer/: assets.py
src/rag_openheidelberg/defs/vectorizer/: assets.py
src/retrieving/: retriever.py
tests/: test_categorizer.py  test_collector.py  test_config.py  test_config.toml  test_converter.py  test_couchdbclient.py  test_councilinsights.py  test_retriever.py  test_s3client.py
