[project]
name = "rag_openheidelberg"
requires-python = ">=3.9,<3.14"
version = "0.1.0"
dependencies = [
    "boto3>=1.40.30",
    "couchdb2>=1.13.0",
    "dagster==1.11.9",
    "datetime>=5.5",
    "docling>=2.52.0",
    "pypdf>=6.1.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "rag_openheidelberg"
registry_modules = [
    "rag_openheidelberg.components.*",
]


